--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "trimafiservidor",
+  "name": "scaffold_servidor_node",
   "version": "1.0.0",
-  "description": "Servidor Node.js para aplicacion Trimafi",
+  "description": "Servidor Node.js para aplicaciones",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha  ./components/**/*.test.js --exit",
     "dev": "nodemon www.js"
   },
-  "author": "Pablo Schonwiesner | Up Software",
+  "author": "Pablo Schonwiesner | PuntoSchon",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -17,7 +18,8 @@
     "log4js": "^6.3.0",
     "mssql": "^7.2.1",
     "mysql2": "^2.3.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "supertest": "^6.1.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
