ADD permissions in route an deploy

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "Pablo Schonwiesner | PuntoSchon",
   "license": "ISC",
   "dependencies": {
+    "atob": "^2.1.2",
     "bcrypt": "^5.0.1",
     "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-oauth2-jwt-bearer": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "mssql": "^7.2.1",
