--- a/production.env
+++ b/production.env
@@ -10,3 +10,6 @@ HOST_MYSQL=
 USER_MYSQL=
 PASSWORD_MYSQL=
 DATABASE_MYSQL=
+
+ISSUER_BASE_URL=https://dev-sf7gkrak.us.auth0.com
+AUDIENCE=https://apiprueba.com/
